--- a/po/sv.po
+++ b/po/sv.po
@@ -9,8 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-31 13:59+0800\n"
 "PO-Revision-Date: 2010-04-02 15:52+0200\n"
-"Last-Translator: Martin <brother@bsnet.se>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: Martin Bagge <brother@bsnet.se>\n"
+"Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
