--- a/po/es_VE.po
+++ b/po/es_VE.po
@@ -643,7 +643,7 @@ msgstr "Por favor, seleccione una carpeta"
 
 #: ../src/gtk/fm-gtk-utils.c:385
 #, fuzzy
-msgid "Only sytem administrator have the permission to do this."
+msgid "Only system administrators have the permission to do this."
 msgstr "Sólo el administrador del sistema tiene el permiso para hacer esto."
 
 #: ../src/gtk/fm-gtk-utils.c:461
