--- a/po/sl.po
+++ b/po/sl.po
@@ -521,8 +521,8 @@ msgid "Please select a folder"
 msgstr "Izberite ciljno mapo"
 
 #: ../src/gtk/fm-gtk-utils.c:385
-msgid "Only sytem administrator have the permission to do this."
-msgstr "Le sistemski administrator ima pravico za to dejanje"
+msgid "Only system administrators have the permission to do this."
+msgstr "Le sistemski administrators ima pravico za to dejanje"
 
 #: ../src/gtk/fm-gtk-utils.c:461
 msgid "Do you want to move the selected files to trash bin?"
