--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -515,7 +515,7 @@ msgid "Please select a folder"
 msgstr "選擇一個資料夾"
 
 #: ../src/gtk/fm-gtk-utils.c:385
-msgid "Only sytem administrator have the permission to do this."
+msgid "Only system administrators have the permission to do this."
 msgstr ""
 
 #: ../src/gtk/fm-gtk-utils.c:461
