--- a/po/cs.po
+++ b/po/cs.po
@@ -517,7 +517,7 @@ msgid "Please select a folder"
 msgstr "Prosím vyberte složku"
 
 #: ../src/gtk/fm-gtk-utils.c:385
-msgid "Only sytem administrator have the permission to do this."
+msgid "Only system administrators have the permission to do this."
 msgstr "Toto má právo provádět pouze systémový správce."
 
 #: ../src/gtk/fm-gtk-utils.c:461
