--- a/po/da.po
+++ b/po/da.po
@@ -520,8 +520,8 @@ msgid "Please select a folder"
 msgstr "Vælg venligst en mappe"
 
 #: ../src/gtk/fm-gtk-utils.c:385
-msgid "Only sytem administrator have the permission to do this."
-msgstr "Kun systemadministratorer har rettigheder til dette."
+msgid "Only system administrators have the permission to do this."
+msgstr "Kun systemadministratorser har rettigheder til dette."
 
 #: ../src/gtk/fm-gtk-utils.c:461
 msgid "Do you want to move the selected files to trash bin?"
