--- a/po/el.po
+++ b/po/el.po
@@ -524,7 +524,7 @@ msgid "Please select a folder"
 msgstr "Παρακαλώ επιλέξτε ένα φάκελο"
 
 #: ../src/gtk/fm-gtk-utils.c:385
-msgid "Only sytem administrator have the permission to do this."
+msgid "Only system administrators have the permission to do this."
 msgstr "Μόνο ο διαχειριστής του συστήματος έχει δικαίωμα να το κάνει"
 
 #: ../src/gtk/fm-gtk-utils.c:461
