--- a/po/es.po
+++ b/po/es.po
@@ -524,7 +524,7 @@ msgid "Please select a folder"
 msgstr "Por favor, seleccione una carpeta"
 
 #: ../src/gtk/fm-gtk-utils.c:385
-msgid "Only sytem administrator have the permission to do this."
+msgid "Only system administrators have the permission to do this."
 msgstr "Sólo el administrador del sistema tiene el permiso para hacer esto."
 
 #: ../src/gtk/fm-gtk-utils.c:461
