--- a/po/gl.po
+++ b/po/gl.po
@@ -525,7 +525,7 @@ msgid "Please select a folder"
 msgstr "Seleccione un cartafol"
 
 #: ../src/gtk/fm-gtk-utils.c:385
-msgid "Only sytem administrator have the permission to do this."
+msgid "Only system administrators have the permission to do this."
 msgstr "Só o administrador ten o permiso para facer isto."
 
 #: ../src/gtk/fm-gtk-utils.c:461
