--- a/po/it.po
+++ b/po/it.po
@@ -516,7 +516,7 @@ msgid "Please select a folder"
 msgstr "Per favore, seleziona una cartella"
 
 #: ../src/gtk/fm-gtk-utils.c:385
-msgid "Only sytem administrator have the permission to do this."
+msgid "Only system administrators have the permission to do this."
 msgstr "Solo l'amministratore del sistema ha permesso di fare questo."
 
 #: ../src/gtk/fm-gtk-utils.c:461
