--- a/po/pt.po
+++ b/po/pt.po
@@ -520,7 +520,7 @@ msgid "Please select a folder"
 msgstr "Seleccione uma pasta"
 
 #: ../src/gtk/fm-gtk-utils.c:385
-msgid "Only sytem administrator have the permission to do this."
+msgid "Only system administrators have the permission to do this."
 msgstr "Apenas o administrador do sistema tem permissões para o fazer."
 
 #: ../src/gtk/fm-gtk-utils.c:461
