--- a/po/ru.po
+++ b/po/ru.po
@@ -517,7 +517,7 @@ msgid "Please select a folder"
 msgstr "Выберите каталог"
 
 #: ../src/gtk/fm-gtk-utils.c:385
-msgid "Only sytem administrator have the permission to do this."
+msgid "Only system administrators have the permission to do this."
 msgstr "Для выполнения этого действия требуются права администратора."
 
 #: ../src/gtk/fm-gtk-utils.c:461
